build/testuserdir/var/cache/index/s1/errors/1/vendor/phpunit/phpunit/tests/TextUI/stop-on-warning-via-config.phpt.warn
WARNING:14:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	%
WARNING:14:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'by'
WARNING:14:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'Sebastian'
WARNING:14:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'Bergmann'
WARNING:18:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'Time'
WARNING:18:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	%
WARNING:18:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	','
WARNING:18:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	%
WARNING:20:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'There'
WARNING:20:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'was'
WARNING:20:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	integer '1'
WARNING:20:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'warning'
WARNING:22:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	)
WARNING:23:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'No'
WARNING:23:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'tests'
WARNING:23:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'found'
WARNING:23:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'in'
WARNING:23:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	class
WARNING:23:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	String '"NoTestCases"'
WARNING:25:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	!
WARNING:26:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	\d
WARNING:26:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	','
WARNING:26:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	','
WARNING:26:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	End of File
